@@ -989,7 +989,7 @@ jsp.submit.thesis-removed-workaround.link =Start a new submission
 jsp.submit.thesis-removed-workaround.title =Submission Stopped
 
 jsp.submit.upload-error.heading =Submit: Error Uploading File
-jsp.submit.upload-error.info =There was a problem uploading your file.  Either the filename you entered was incorrect, or there was a network problem which prevented the file from reaching us correctly.  Please try again.
+jsp.submit.upload-error.info =There was a problem uploading your file.  Either the filename you entered was incorrect, there was a network problem which prevented the file from reaching us correctly, or you have attempted to upload a file format marked for internal system use only.  Please try again.
 jsp.submit.upload-error.retry.button =Retry Upload
 jsp.submit.upload-error.title =Error Uploading File
 
